# REFINET-PILLARS

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEV_GUIDE.md  Dockerfile  GETTING-STARTED.md  PILLAR_TOR_PRD.docx  PLATFORM_OVERVIEW.md  README.md  SECURITY.md  WHITEPAPER.md  docker-compose.yml  fly.toml  index.md  mkdocs.yml  netlify.toml  pillar.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
auth/: session.py  siwe.py
browser-extension/: background.js  content.js  gopher.js  manifest.json  page-api.js  popup.html  popup.js  styles.css
cli/: hole.py  peer.py
core/: config.py  dapp.py  gopher_client.py  gopher_server.py  gopherhole.py  gophermap_parser.py  menu_builder.py  readiness.py  tor_manager.py  vpn_manager.py  watchdog.py
crypto/: binding.py  hsm.py  pid.py  profiles.py  recovery.py  signing.py  tls.py  zkp.py
db/: archive_db.py  audit.py  live_db.py  schema.py
deploy/: install.sh  peers.json.example  refinet-pillar.service
docs/: DEPLOYMENT.md  backup.md  wire-formats.md
gopherroot/: gophermap
integration/: ipc_socket.py  websocket_bridge.py
mesh/: discovery.py  encrypted_channel.py  replication.py
onboarding/: readiness_step.py  server.py  wizard.py
proxy/: forward_proxy.py
rpc/: chains.py  config.py  gateway.py
scripts/: bootstrap_keygen.py  headless_start.py  release.sh
tests/: conftest.py  test_binding.py  test_dapp.py  test_discovery.py  test_download_route.py  test_dual_port.py  test_encrypted_channel.py  test_first_run.py  test_forward_proxy.py  test_gap_closure.py  test_gopher_client.py  test_gopherhole_cli.py  test_gopherholes.py  test_gophermap_parser.py  test_hsm.py  test_ipc_socket.py  test_onboarding_wizard.py  test_onboarding_ws.py  (+16 more)
(+50 files in other folders)
